# dew-library

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
data/: health_report.json  manifest.jsonl
data/index/: embedder.json
data/pages/: 0c460af86bec2f9d.json  102d8113025bc862.json  10b3698563b81e02.json  12b0f2062aad8252.json  1f1d66a677c6824f.json  1fe82beb53d9357b.json  2bdda3ab2dc3e379.json  2e5cb6c121b722c6.json  2ef2b9c796bea673.json  31e1b30b1889c21b.json  361f666d7e16249a.json  36eaabcf2310592f.json  3bc0e02f02e783c2.json  3d56c322f2cd1807.json  548f217f7aed68ee.json  59bd8e97ea01561c.json  5bb7e56cefb9f7dd.json  6152e82f3b26fd6a.json  659cdcccc98d6f65.json  6916a273b50511ad.json  6e10a94d0cb5ea6d.json  6f0809c273557c90.json  714da3d5b75c24c6.json  720214f338bf7aff.json  756fe7cc533d52ed.json  7583d225f0d29a3a.json  77882f5fdba4f2ad.json  7c1f86660aa4a5ca.json  7cc362ce31be49b8.json  839bc10165e24321.json  8a0ab4a290444566.json  8fceba7286f04e29.json  98b2211d37618060.json  9c2b75e4c5d5209c.json  9d248babef1b8ad4.json  a0c68e19b51481b8.json  a9c2d091f9018828.json  abdeaf69e3a82fcb.json  ac2be352f0c1bb4c.json  aca99085f680ed68.json  (+33 more)
dewlib/: __init__.py  config.py  embed.py  index.py  manifest.py  search.py  util.py
scripts/: serve.py
server/: api.py
